--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,6 +8,7 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 [staging : production]
 
 [testing : production]
@@ -24,3 +25,4 @@ resources.db.params.dbname = "amazend"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = ""
+
