--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -23,6 +23,6 @@ resources.frontController.params.displayExceptions = 1
 resources.db.adapter = "PDO_MYSQL"
 resources.db.params.dbname = "amazend"
 resources.db.params.host = "localhost"
-resources.db.params.username = "root"
-resources.db.params.password = ""
+resources.db.params.username = "mohamed"
+resources.db.params.password = "123456"
 
