category and coupon commit

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -24,5 +24,6 @@ resources.db.adapter = "PDO_MYSQL"
 resources.db.params.dbname = "amazend"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
-resources.db.params.password = ""
+resources.db.params.password = "hager"
+
 
